# STM32CubeL4

./: .bazelrc  .gitignore  .gitmodules  BUILD.bazel  CONTRIBUTING.md  License.md  README.md  Release_Notes.html  WORKSPACE  package.xml  sbom_cdx.json
.github/: PULL_REQUEST_TEMPLATE.md
Drivers/BSP/Adafruit_Shield/: Release_Notes.html  stm32_adafruit_sd.h
Drivers/BSP/B-L475E-IOT01/: README.md  Release_Notes.html  stm32l475e_iot01.c  stm32l475e_iot01.h  stm32l475e_iot01_accelero.c  stm32l475e_iot01_accelero.h  stm32l475e_iot01_gyro.c  stm32l475e_iot01_gyro.h  stm32l475e_iot01_hsensor.c  stm32l475e_iot01_hsensor.h  stm32l475e_iot01_magneto.c  stm32l475e_iot01_magneto.h  stm32l475e_iot01_psensor.c  stm32l475e_iot01_psensor.h  stm32l475e_iot01_qspi.c  stm32l475e_iot01_qspi.h  stm32l475e_iot01_tsensor.c  stm32l475e_iot01_tsensor.h
Drivers/BSP/B-L4S5I-IOT01/: README.md  Release_Notes.html  stm32l4s5i_iot01.c  stm32l4s5i_iot01.h  stm32l4s5i_iot01_accelero.c  stm32l4s5i_iot01_accelero.h  stm32l4s5i_iot01_gyro.c  stm32l4s5i_iot01_gyro.h  stm32l4s5i_iot01_hsensor.c  stm32l4s5i_iot01_hsensor.h  stm32l4s5i_iot01_magneto.c  stm32l4s5i_iot01_magneto.h  stm32l4s5i_iot01_nfctag.c  stm32l4s5i_iot01_nfctag.h  stm32l4s5i_iot01_psensor.c  stm32l4s5i_iot01_psensor.h  stm32l4s5i_iot01_qspi.c  stm32l4s5i_iot01_qspi.h  stm32l4s5i_iot01_tsensor.c  stm32l4s5i_iot01_tsensor.h
Drivers/BSP/STM32L476G-Discovery/: README.md  Release_Notes.html  stm32l476g_discovery.c  stm32l476g_discovery.h  stm32l476g_discovery_audio.c  stm32l476g_discovery_audio.h  stm32l476g_discovery_compass.c  stm32l476g_discovery_compass.h  stm32l476g_discovery_glass_lcd.c  stm32l476g_discovery_glass_lcd.h  stm32l476g_discovery_gyroscope.c  stm32l476g_discovery_gyroscope.h  stm32l476g_discovery_idd.c  stm32l476g_discovery_idd.h  stm32l476g_discovery_qspi.c  stm32l476g_discovery_qspi.h
Drivers/BSP/STM32L476G_EVAL/: README.md  Release_Notes.html  stm32l476g_eval.c  stm32l476g_eval.h  stm32l476g_eval_audio.c  stm32l476g_eval_audio.h  stm32l476g_eval_eeprom.c  stm32l476g_eval_eeprom.h  stm32l476g_eval_glass_lcd.c  stm32l476g_eval_glass_lcd.h  stm32l476g_eval_idd.c  stm32l476g_eval_idd.h  stm32l476g_eval_io.c  stm32l476g_eval_io.h  stm32l476g_eval_lcd.c  stm32l476g_eval_lcd.h  stm32l476g_eval_nor.c  stm32l476g_eval_nor.h  stm32l476g_eval_qspi.c  stm32l476g_eval_qspi.h  stm32l476g_eval_sd.c  stm32l476g_eval_sd.h  stm32l476g_eval_sram.c  stm32l476g_eval_sram.h  stm32l476g_eval_ts.c  stm32l476g_eval_ts.h
Drivers/BSP/STM32L496G-Discovery/: README.md  Release_Notes.html  stm32l496g_discovery.c  stm32l496g_discovery.h  stm32l496g_discovery_audio.c  stm32l496g_discovery_audio.h  stm32l496g_discovery_camera.c  stm32l496g_discovery_camera.h  stm32l496g_discovery_idd.c  stm32l496g_discovery_idd.h  stm32l496g_discovery_io.c  stm32l496g_discovery_io.h  stm32l496g_discovery_lcd.c  stm32l496g_discovery_lcd.h  stm32l496g_discovery_qspi.c  stm32l496g_discovery_qspi.h  stm32l496g_discovery_sd.c  stm32l496g_discovery_sd.h  stm32l496g_discovery_sram.c  stm32l496g_discovery_sram.h  stm32l496g_discovery_ts.c  stm32l496g_discovery_ts.h
Drivers/BSP/STM32L4P5G-Discovery/: README.md  Release_Notes.html  stm32l4p5g_discovery.c  stm32l4p5g_discovery.h  stm32l4p5g_discovery_idd.c  stm32l4p5g_discovery_idd.h  stm32l4p5g_discovery_io.c  stm32l4p5g_discovery_io.h  stm32l4p5g_discovery_lcd.c  stm32l4p5g_discovery_lcd.h  stm32l4p5g_discovery_mmc.c  stm32l4p5g_discovery_mmc.h  stm32l4p5g_discovery_ospi_nor.c  stm32l4p5g_discovery_ospi_nor.h  stm32l4p5g_discovery_psram.c  stm32l4p5g_discovery_psram.h  stm32l4p5g_discovery_ts.c  stm32l4p5g_discovery_ts.h
Drivers/BSP/STM32L4R9I-Discovery/: README.md  Release_Notes.html  stm32l4r9i_discovery.c  stm32l4r9i_discovery.h  stm32l4r9i_discovery_audio.c  stm32l4r9i_discovery_audio.h  stm32l4r9i_discovery_camera.c  stm32l4r9i_discovery_camera.h  stm32l4r9i_discovery_gfxmmu_lut.h  stm32l4r9i_discovery_idd.c  stm32l4r9i_discovery_idd.h  stm32l4r9i_discovery_io.c  stm32l4r9i_discovery_io.h  stm32l4r9i_discovery_lcd.c  stm32l4r9i_discovery_lcd.h  stm32l4r9i_discovery_ospi_nor.c  stm32l4r9i_discovery_ospi_nor.h  stm32l4r9i_discovery_psram.c  stm32l4r9i_discovery_psram.h  stm32l4r9i_discovery_sd.c  stm32l4r9i_discovery_sd.h  stm32l4r9i_discovery_ts.c  stm32l4r9i_discovery_ts.h
Drivers/BSP/STM32L4R9I_EVAL/: README.md  Release_Notes.html  stm32l4r9i_eval.c  stm32l4r9i_eval.h  stm32l4r9i_eval_audio.c  stm32l4r9i_eval_audio.h  stm32l4r9i_eval_dsi_lcd.c  stm32l4r9i_eval_dsi_lcd.h  stm32l4r9i_eval_dsi_ts.c  stm32l4r9i_eval_dsi_ts.h  stm32l4r9i_eval_eeprom.c  stm32l4r9i_eval_eeprom.h  stm32l4r9i_eval_gfxmmu_lut.h  stm32l4r9i_eval_idd.c  stm32l4r9i_eval_idd.h  stm32l4r9i_eval_io.c  stm32l4r9i_eval_io.h  stm32l4r9i_eval_lcd.h  stm32l4r9i_eval_nor.c  stm32l4r9i_eval_nor.h  stm32l4r9i_eval_ospi_nor.c  stm32l4r9i_eval_ospi_nor.h  stm32l4r9i_eval_ospi_ram.c  stm32l4r9i_eval_ospi_ram.h  stm32l4r9i_eval_rgb_lcd.c  stm32l4r9i_eval_rgb_lcd.h  stm32l4r9i_eval_rgb_ts.c  stm32l4r9i_eval_rgb_ts.h  stm32l4r9i_eval_sd.c  stm32l4r9i_eval_sd.h  stm32l4r9i_eval_sram.c  stm32l4r9i_eval_sram.h  (+1 more)
Projects/: README.md  Release_Notes.html  STM32CubeProjectsList.html
Projects/NUCLEO-L432KC/Examples/ADC/ADC_RegularConversion_Polling/: BUILD.bazel  readme.txt
Projects/NUCLEO-L432KC/Examples/ADC/ADC_RegularConversion_Polling/Inc/: main.h  stm32l4xx_it.h
Projects/NUCLEO-L432KC/Examples/ADC/ADC_RegularConversion_Polling/MDK-ARM/: Project.uvoptx
Projects/NUCLEO-L432KC/Examples/ADC/ADC_RegularConversion_Polling/STM32CubeIDE/: .cproject  .project
Projects/NUCLEO-L432KC/Examples/ADC/ADC_RegularConversion_Polling/SW4STM32/STM32L432KC_NUCLEO/: .cproject
Projects/NUCLEO-L432KC/Examples/ADC/ADC_RegularConversion_Polling/Src/: main.c  stm32l4xx_hal_msp.c
Utilities/CPU/: Release_Notes.html
Utilities/Fonts/: Release_Notes.html  font12.c  font16.c  font20.c  font24.c  font8.c  fonts.h
Utilities/Log/: Release_Notes.html  lcd_log.c  lcd_log.h  lcd_log_conf_template.h
Utilities/Media/: readme.txt
_htmresc/: ReleaseNotes.html  ReleaseNotes_Patch.html
(+15229 files in other folders)
