package(default_visibility = ["//visibility:public"])

constraint_setting(
    name = "device",
)

DEVICES = [
    "stm32l412",
    "stm32l422",
    "stm32l431",
    "stm32l432",
    "stm32l433",
    "stm32l442",
    "stm32l443",
    "stm32l451",
    "stm32l452",
    "stm32l462",
    "stm32l471",
    "stm32l475",
    "stm32l476",
    "stm32l485",
    "stm32l486",
    "stm32l496",
    "stm32l4a6",
    "stm32l4p5",
    "stm32l4q5",
    "stm32l4r5",
    "stm32l4r7",
    "stm32l4r9",
    "stm32l4s5",
    "stm32l4s7",
    "stm32l4s9",
]

[
    constraint_value(
        name = device,
        constraint_setting = ":device",
    )
    for device in DEVICES
]

[
    platform(
        name = device + "xx",
        constraint_values = [
            ":" + device,
        ],
        parents = ["@bazel_embedded//platforms:cortex_m4_fpu"],
    )
    for device in DEVICES
]

DEFINES = select({":" + device: [device.upper() + "xx"] for device in DEVICES})

cc_library(
    name = "empty",
)

label_flag(
    name = "stm32l4xx_hal_driver_config",
    build_setting_default = "//Projects/NUCLEO-L432KC/Examples/ADC/ADC_RegularConversion_Polling:stm32l4xx_hal_driver_config",
)

cc_library(
    name = "stm32l4xx_hal_driver",
    srcs = [
        "Drivers/STM32L4xx_HAL_Driver/Src/Legacy/stm32l4xx_hal_can.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_adc.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_adc_ex.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_can.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_comp.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_cortex.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_crc.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_crc_ex.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_cryp.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_cryp_ex.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_dac.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_dac_ex.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_dcmi.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_dfsdm.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_dfsdm_ex.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_dma.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_dma2d.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_dma_ex.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_dsi.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_exti.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_firewall.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_flash.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_flash_ex.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_flash_ramfunc.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_gfxmmu.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_gpio.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_hash.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_hash_ex.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_hcd.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_i2c.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_i2c_ex.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_irda.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_iwdg.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_lcd.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_lptim.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_ltdc.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_ltdc_ex.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_mmc.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_mmc_ex.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_nand.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_nor.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_opamp.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_opamp_ex.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_ospi.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_pcd.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_pcd_ex.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_pka.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_pssi.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_pwr.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_pwr_ex.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_qspi.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_rcc.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_rcc_ex.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_rng.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_rng_ex.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_rtc.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_rtc_ex.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_sai.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_sai_ex.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_sd.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_sd_ex.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_smartcard.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_smartcard_ex.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_smbus.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_smbus_ex.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_spi.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_spi_ex.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_sram.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_swpmi.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_tim.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_tim_ex.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_tsc.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_uart.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_uart_ex.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_usart.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_usart_ex.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_hal_wwdg.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_adc.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_comp.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_crc.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_crs.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_dac.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_dma.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_dma2d.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_exti.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_fmc.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_gpio.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_i2c.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_lptim.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_lpuart.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_opamp.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_pka.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_pwr.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_rcc.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_rng.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_rtc.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_sdmmc.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_spi.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_swpmi.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_tim.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_usart.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_usb.c",
        "Drivers/STM32L4xx_HAL_Driver/Src/stm32l4xx_ll_utils.c",
    ],
    hdrs = [
        "Drivers/STM32L4xx_HAL_Driver/Inc/Legacy/stm32_hal_legacy.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/Legacy/stm32l4xx_hal_can_legacy.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_adc.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_adc_ex.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_can.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_comp.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_cortex.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_crc.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_crc_ex.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_cryp.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_cryp_ex.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_dac.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_dac_ex.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_dcmi.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_def.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_dfsdm.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_dfsdm_ex.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_dma.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_dma2d.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_dma_ex.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_dsi.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_exti.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_firewall.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_flash.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_flash_ex.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_flash_ramfunc.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_gfxmmu.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_gpio.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_gpio_ex.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_hash.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_hash_ex.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_hcd.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_i2c.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_i2c_ex.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_irda.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_irda_ex.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_iwdg.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_lcd.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_lptim.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_ltdc.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_ltdc_ex.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_mmc.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_mmc_ex.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_nand.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_nor.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_opamp.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_opamp_ex.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_ospi.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_pcd.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_pcd_ex.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_pka.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_pssi.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_pwr.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_pwr_ex.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_qspi.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_rcc.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_rcc_ex.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_rng.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_rng_ex.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_rtc.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_rtc_ex.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_sai.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_sai_ex.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_sd.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_sd_ex.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_smartcard.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_smartcard_ex.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_smbus.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_smbus_ex.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_spi.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_spi_ex.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_sram.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_swpmi.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_tim.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_tim_ex.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_tsc.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_uart.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_uart_ex.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_usart.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_usart_ex.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_hal_wwdg.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_adc.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_bus.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_comp.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_cortex.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_crc.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_crs.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_dac.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_dma.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_dma2d.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_dmamux.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_exti.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_fmc.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_gpio.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_i2c.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_iwdg.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_lptim.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_lpuart.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_opamp.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_pka.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_pwr.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_rcc.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_rng.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_rtc.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_sdmmc.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_spi.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_swpmi.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_system.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_tim.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_usart.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_usb.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_utils.h",
        "Drivers/STM32L4xx_HAL_Driver/Inc/stm32l4xx_ll_wwdg.h",
    ],
    defines = DEFINES,
    includes = [
        "Drivers/STM32L4xx_HAL_Driver/Inc",
        "Drivers/STM32L4xx_HAL_Driver/Inc/Legacy",
    ],
    deps = [
        "stm32_cmsis_driver",
        ":stm32l4xx_hal_driver_config",
    ],
)

cc_library(
    name = "stm32_cmsis_driver",
    srcs = [
        "Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_abs_f32.c",
        "Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_abs_q15.c",
        "Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_abs_q31.c",
        "Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_abs_q7.c",
        "Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_add_f32.c",
        "Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_add_q15.c",
        "Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_add_q31.c",
        "Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_add_q7.c",
        "Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_dot_prod_f32.c",
        "Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_dot_prod_q15.c",
        "Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_dot_prod_q31.c",
        "Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_dot_prod_q7.c",
        "Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_mult_f32.c",
        "Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_mult_q15.c",
        "Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_mult_q31.c",
        "Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_mult_q7.c",
        "Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_negate_f32.c",
        "Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_negate_q15.c",
        "Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_negate_q31.c",
        "Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_negate_q7.c",
        "Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_offset_f32.c",
        "Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_offset_q15.c",
        "Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_offset_q31.c",
        "Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_offset_q7.c",
        "Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_scale_f32.c",
        "Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_scale_q15.c",
        "Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_scale_q31.c",
        "Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_scale_q7.c",
        "Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_shift_q15.c",
        "Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_shift_q31.c",
        "Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_shift_q7.c",
        "Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_sub_f32.c",
        "Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_sub_q15.c",
        "Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_sub_q31.c",
        "Drivers/CMSIS/DSP/Source/BasicMathFunctions/arm_sub_q7.c",
        "Drivers/CMSIS/DSP/Source/CommonTables/arm_common_tables.c",
        "Drivers/CMSIS/DSP/Source/CommonTables/arm_const_structs.c",
        "Drivers/CMSIS/DSP/Source/ComplexMathFunctions/arm_cmplx_conj_f32.c",
        "Drivers/CMSIS/DSP/Source/ComplexMathFunctions/arm_cmplx_conj_q15.c",
        "Drivers/CMSIS/DSP/Source/ComplexMathFunctions/arm_cmplx_conj_q31.c",
        "Drivers/CMSIS/DSP/Source/ComplexMathFunctions/arm_cmplx_dot_prod_f32.c",
        "Drivers/CMSIS/DSP/Source/ComplexMathFunctions/arm_cmplx_dot_prod_q15.c",
        "Drivers/CMSIS/DSP/Source/ComplexMathFunctions/arm_cmplx_dot_prod_q31.c",
        "Drivers/CMSIS/DSP/Source/ComplexMathFunctions/arm_cmplx_mag_f32.c",
        "Drivers/CMSIS/DSP/Source/ComplexMathFunctions/arm_cmplx_mag_q15.c",
        "Drivers/CMSIS/DSP/Source/ComplexMathFunctions/arm_cmplx_mag_q31.c",
        "Drivers/CMSIS/DSP/Source/ComplexMathFunctions/arm_cmplx_mag_squared_f32.c",
        "Drivers/CMSIS/DSP/Source/ComplexMathFunctions/arm_cmplx_mag_squared_q15.c",
        "Drivers/CMSIS/DSP/Source/ComplexMathFunctions/arm_cmplx_mag_squared_q31.c",
        "Drivers/CMSIS/DSP/Source/ComplexMathFunctions/arm_cmplx_mult_cmplx_f32.c",
        "Drivers/CMSIS/DSP/Source/ComplexMathFunctions/arm_cmplx_mult_cmplx_q15.c",
        "Drivers/CMSIS/DSP/Source/ComplexMathFunctions/arm_cmplx_mult_cmplx_q31.c",
        "Drivers/CMSIS/DSP/Source/ComplexMathFunctions/arm_cmplx_mult_real_f32.c",
        "Drivers/CMSIS/DSP/Source/ComplexMathFunctions/arm_cmplx_mult_real_q15.c",
        "Drivers/CMSIS/DSP/Source/ComplexMathFunctions/arm_cmplx_mult_real_q31.c",
        "Drivers/CMSIS/DSP/Source/ControllerFunctions/arm_pid_init_f32.c",
        "Drivers/CMSIS/DSP/Source/ControllerFunctions/arm_pid_init_q15.c",
        "Drivers/CMSIS/DSP/Source/ControllerFunctions/arm_pid_init_q31.c",
        "Drivers/CMSIS/DSP/Source/ControllerFunctions/arm_pid_reset_f32.c",
        "Drivers/CMSIS/DSP/Source/ControllerFunctions/arm_pid_reset_q15.c",
        "Drivers/CMSIS/DSP/Source/ControllerFunctions/arm_pid_reset_q31.c",
        "Drivers/CMSIS/DSP/Source/ControllerFunctions/arm_sin_cos_f32.c",
        "Drivers/CMSIS/DSP/Source/ControllerFunctions/arm_sin_cos_q31.c",
        "Drivers/CMSIS/DSP/Source/FastMathFunctions/arm_cos_f32.c",
        "Drivers/CMSIS/DSP/Source/FastMathFunctions/arm_cos_q15.c",
        "Drivers/CMSIS/DSP/Source/FastMathFunctions/arm_cos_q31.c",
        "Drivers/CMSIS/DSP/Source/FastMathFunctions/arm_sin_f32.c",
        "Drivers/CMSIS/DSP/Source/FastMathFunctions/arm_sin_q15.c",
        "Drivers/CMSIS/DSP/Source/FastMathFunctions/arm_sin_q31.c",
        "Drivers/CMSIS/DSP/Source/FastMathFunctions/arm_sqrt_q15.c",
        "Drivers/CMSIS/DSP/Source/FastMathFunctions/arm_sqrt_q31.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_biquad_cascade_df1_32x64_init_q31.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_biquad_cascade_df1_32x64_q31.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_biquad_cascade_df1_f32.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_biquad_cascade_df1_fast_q15.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_biquad_cascade_df1_fast_q31.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_biquad_cascade_df1_init_f32.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_biquad_cascade_df1_init_q15.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_biquad_cascade_df1_init_q31.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_biquad_cascade_df1_q15.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_biquad_cascade_df1_q31.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_biquad_cascade_df2T_f32.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_biquad_cascade_df2T_f64.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_biquad_cascade_df2T_init_f32.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_biquad_cascade_df2T_init_f64.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_biquad_cascade_stereo_df2T_f32.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_biquad_cascade_stereo_df2T_init_f32.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_conv_f32.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_conv_fast_opt_q15.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_conv_fast_q15.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_conv_fast_q31.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_conv_opt_q15.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_conv_opt_q7.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_conv_partial_f32.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_conv_partial_fast_opt_q15.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_conv_partial_fast_q15.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_conv_partial_fast_q31.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_conv_partial_opt_q15.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_conv_partial_opt_q7.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_conv_partial_q15.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_conv_partial_q31.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_conv_partial_q7.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_conv_q15.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_conv_q31.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_conv_q7.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_correlate_f32.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_correlate_fast_opt_q15.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_correlate_fast_q15.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_correlate_fast_q31.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_correlate_opt_q15.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_correlate_opt_q7.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_correlate_q15.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_correlate_q31.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_correlate_q7.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_fir_decimate_f32.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_fir_decimate_fast_q15.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_fir_decimate_fast_q31.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_fir_decimate_init_f32.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_fir_decimate_init_q15.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_fir_decimate_init_q31.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_fir_decimate_q15.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_fir_decimate_q31.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_fir_f32.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_fir_fast_q15.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_fir_fast_q31.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_fir_init_f32.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_fir_init_q15.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_fir_init_q31.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_fir_init_q7.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_fir_interpolate_f32.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_fir_interpolate_init_f32.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_fir_interpolate_init_q15.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_fir_interpolate_init_q31.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_fir_interpolate_q15.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_fir_interpolate_q31.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_fir_lattice_f32.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_fir_lattice_init_f32.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_fir_lattice_init_q15.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_fir_lattice_init_q31.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_fir_lattice_q15.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_fir_lattice_q31.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_fir_q15.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_fir_q31.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_fir_q7.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_fir_sparse_f32.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_fir_sparse_init_f32.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_fir_sparse_init_q15.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_fir_sparse_init_q31.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_fir_sparse_init_q7.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_fir_sparse_q15.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_fir_sparse_q31.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_fir_sparse_q7.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_iir_lattice_f32.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_iir_lattice_init_f32.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_iir_lattice_init_q15.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_iir_lattice_init_q31.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_iir_lattice_q15.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_iir_lattice_q31.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_lms_f32.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_lms_init_f32.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_lms_init_q15.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_lms_init_q31.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_lms_norm_f32.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_lms_norm_init_f32.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_lms_norm_init_q15.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_lms_norm_init_q31.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_lms_norm_q15.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_lms_norm_q31.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_lms_q15.c",
        "Drivers/CMSIS/DSP/Source/FilteringFunctions/arm_lms_q31.c",
        "Drivers/CMSIS/DSP/Source/MatrixFunctions/arm_mat_add_f32.c",
        "Drivers/CMSIS/DSP/Source/MatrixFunctions/arm_mat_add_q15.c",
        "Drivers/CMSIS/DSP/Source/MatrixFunctions/arm_mat_add_q31.c",
        "Drivers/CMSIS/DSP/Source/MatrixFunctions/arm_mat_cmplx_mult_f32.c",
        "Drivers/CMSIS/DSP/Source/MatrixFunctions/arm_mat_cmplx_mult_q15.c",
        "Drivers/CMSIS/DSP/Source/MatrixFunctions/arm_mat_cmplx_mult_q31.c",
        "Drivers/CMSIS/DSP/Source/MatrixFunctions/arm_mat_init_f32.c",
        "Drivers/CMSIS/DSP/Source/MatrixFunctions/arm_mat_init_q15.c",
        "Drivers/CMSIS/DSP/Source/MatrixFunctions/arm_mat_init_q31.c",
        "Drivers/CMSIS/DSP/Source/MatrixFunctions/arm_mat_inverse_f32.c",
        "Drivers/CMSIS/DSP/Source/MatrixFunctions/arm_mat_inverse_f64.c",
        "Drivers/CMSIS/DSP/Source/MatrixFunctions/arm_mat_mult_f32.c",
        "Drivers/CMSIS/DSP/Source/MatrixFunctions/arm_mat_mult_fast_q15.c",
        "Drivers/CMSIS/DSP/Source/MatrixFunctions/arm_mat_mult_fast_q31.c",
        "Drivers/CMSIS/DSP/Source/MatrixFunctions/arm_mat_mult_q15.c",
        "Drivers/CMSIS/DSP/Source/MatrixFunctions/arm_mat_mult_q31.c",
        "Drivers/CMSIS/DSP/Source/MatrixFunctions/arm_mat_scale_f32.c",
        "Drivers/CMSIS/DSP/Source/MatrixFunctions/arm_mat_scale_q15.c",
        "Drivers/CMSIS/DSP/Source/MatrixFunctions/arm_mat_scale_q31.c",
        "Drivers/CMSIS/DSP/Source/MatrixFunctions/arm_mat_sub_f32.c",
        "Drivers/CMSIS/DSP/Source/MatrixFunctions/arm_mat_sub_q15.c",
        "Drivers/CMSIS/DSP/Source/MatrixFunctions/arm_mat_sub_q31.c",
        "Drivers/CMSIS/DSP/Source/MatrixFunctions/arm_mat_trans_f32.c",
        "Drivers/CMSIS/DSP/Source/MatrixFunctions/arm_mat_trans_q15.c",
        "Drivers/CMSIS/DSP/Source/MatrixFunctions/arm_mat_trans_q31.c",
        "Drivers/CMSIS/DSP/Source/StatisticsFunctions/arm_max_f32.c",
        "Drivers/CMSIS/DSP/Source/StatisticsFunctions/arm_max_q15.c",
        "Drivers/CMSIS/DSP/Source/StatisticsFunctions/arm_max_q31.c",
        "Drivers/CMSIS/DSP/Source/StatisticsFunctions/arm_max_q7.c",
        "Drivers/CMSIS/DSP/Source/StatisticsFunctions/arm_mean_f32.c",
        "Drivers/CMSIS/DSP/Source/StatisticsFunctions/arm_mean_q15.c",
        "Drivers/CMSIS/DSP/Source/StatisticsFunctions/arm_mean_q31.c",
        "Drivers/CMSIS/DSP/Source/StatisticsFunctions/arm_mean_q7.c",
        "Drivers/CMSIS/DSP/Source/StatisticsFunctions/arm_min_f32.c",
        "Drivers/CMSIS/DSP/Source/StatisticsFunctions/arm_min_q15.c",
        "Drivers/CMSIS/DSP/Source/StatisticsFunctions/arm_min_q31.c",
        "Drivers/CMSIS/DSP/Source/StatisticsFunctions/arm_min_q7.c",
        "Drivers/CMSIS/DSP/Source/StatisticsFunctions/arm_power_f32.c",
        "Drivers/CMSIS/DSP/Source/StatisticsFunctions/arm_power_q15.c",
        "Drivers/CMSIS/DSP/Source/StatisticsFunctions/arm_power_q31.c",
        "Drivers/CMSIS/DSP/Source/StatisticsFunctions/arm_power_q7.c",
        "Drivers/CMSIS/DSP/Source/StatisticsFunctions/arm_rms_f32.c",
        "Drivers/CMSIS/DSP/Source/StatisticsFunctions/arm_rms_q15.c",
        "Drivers/CMSIS/DSP/Source/StatisticsFunctions/arm_rms_q31.c",
        "Drivers/CMSIS/DSP/Source/StatisticsFunctions/arm_std_f32.c",
        "Drivers/CMSIS/DSP/Source/StatisticsFunctions/arm_std_q15.c",
        "Drivers/CMSIS/DSP/Source/StatisticsFunctions/arm_std_q31.c",
        "Drivers/CMSIS/DSP/Source/StatisticsFunctions/arm_var_f32.c",
        "Drivers/CMSIS/DSP/Source/StatisticsFunctions/arm_var_q15.c",
        "Drivers/CMSIS/DSP/Source/StatisticsFunctions/arm_var_q31.c",
        "Drivers/CMSIS/DSP/Source/SupportFunctions/arm_copy_f32.c",
        "Drivers/CMSIS/DSP/Source/SupportFunctions/arm_copy_q15.c",
        "Drivers/CMSIS/DSP/Source/SupportFunctions/arm_copy_q31.c",
        "Drivers/CMSIS/DSP/Source/SupportFunctions/arm_copy_q7.c",
        "Drivers/CMSIS/DSP/Source/SupportFunctions/arm_fill_f32.c",
        "Drivers/CMSIS/DSP/Source/SupportFunctions/arm_fill_q15.c",
        "Drivers/CMSIS/DSP/Source/SupportFunctions/arm_fill_q31.c",
        "Drivers/CMSIS/DSP/Source/SupportFunctions/arm_fill_q7.c",
        "Drivers/CMSIS/DSP/Source/SupportFunctions/arm_float_to_q15.c",
        "Drivers/CMSIS/DSP/Source/SupportFunctions/arm_float_to_q31.c",
        "Drivers/CMSIS/DSP/Source/SupportFunctions/arm_float_to_q7.c",
        "Drivers/CMSIS/DSP/Source/SupportFunctions/arm_q15_to_float.c",
        "Drivers/CMSIS/DSP/Source/SupportFunctions/arm_q15_to_q31.c",
        "Drivers/CMSIS/DSP/Source/SupportFunctions/arm_q15_to_q7.c",
        "Drivers/CMSIS/DSP/Source/SupportFunctions/arm_q31_to_float.c",
        "Drivers/CMSIS/DSP/Source/SupportFunctions/arm_q31_to_q15.c",
        "Drivers/CMSIS/DSP/Source/SupportFunctions/arm_q31_to_q7.c",
        "Drivers/CMSIS/DSP/Source/SupportFunctions/arm_q7_to_float.c",
        "Drivers/CMSIS/DSP/Source/SupportFunctions/arm_q7_to_q15.c",
        "Drivers/CMSIS/DSP/Source/SupportFunctions/arm_q7_to_q31.c",
        "Drivers/CMSIS/DSP/Source/TransformFunctions/arm_bitreversal.c",
        "Drivers/CMSIS/DSP/Source/TransformFunctions/arm_bitreversal2.c",
        "Drivers/CMSIS/DSP/Source/TransformFunctions/arm_cfft_f32.c",
        "Drivers/CMSIS/DSP/Source/TransformFunctions/arm_cfft_q15.c",
        "Drivers/CMSIS/DSP/Source/TransformFunctions/arm_cfft_q31.c",
        "Drivers/CMSIS/DSP/Source/TransformFunctions/arm_cfft_radix2_f32.c",
        "Drivers/CMSIS/DSP/Source/TransformFunctions/arm_cfft_radix2_init_f32.c",
        "Drivers/CMSIS/DSP/Source/TransformFunctions/arm_cfft_radix2_init_q15.c",
        "Drivers/CMSIS/DSP/Source/TransformFunctions/arm_cfft_radix2_init_q31.c",
        "Drivers/CMSIS/DSP/Source/TransformFunctions/arm_cfft_radix2_q15.c",
        "Drivers/CMSIS/DSP/Source/TransformFunctions/arm_cfft_radix2_q31.c",
        "Drivers/CMSIS/DSP/Source/TransformFunctions/arm_cfft_radix4_f32.c",
        "Drivers/CMSIS/DSP/Source/TransformFunctions/arm_cfft_radix4_init_f32.c",
        "Drivers/CMSIS/DSP/Source/TransformFunctions/arm_cfft_radix4_init_q15.c",
        "Drivers/CMSIS/DSP/Source/TransformFunctions/arm_cfft_radix4_init_q31.c",
        "Drivers/CMSIS/DSP/Source/TransformFunctions/arm_cfft_radix4_q15.c",
        "Drivers/CMSIS/DSP/Source/TransformFunctions/arm_cfft_radix4_q31.c",
        "Drivers/CMSIS/DSP/Source/TransformFunctions/arm_cfft_radix8_f32.c",
        "Drivers/CMSIS/DSP/Source/TransformFunctions/arm_dct4_f32.c",
        "Drivers/CMSIS/DSP/Source/TransformFunctions/arm_dct4_init_f32.c",
        "Drivers/CMSIS/DSP/Source/TransformFunctions/arm_dct4_init_q15.c",
        "Drivers/CMSIS/DSP/Source/TransformFunctions/arm_dct4_init_q31.c",
        "Drivers/CMSIS/DSP/Source/TransformFunctions/arm_dct4_q15.c",
        "Drivers/CMSIS/DSP/Source/TransformFunctions/arm_dct4_q31.c",
        "Drivers/CMSIS/DSP/Source/TransformFunctions/arm_rfft_f32.c",
        "Drivers/CMSIS/DSP/Source/TransformFunctions/arm_rfft_fast_f32.c",
        "Drivers/CMSIS/DSP/Source/TransformFunctions/arm_rfft_fast_init_f32.c",
        "Drivers/CMSIS/DSP/Source/TransformFunctions/arm_rfft_init_f32.c",
        "Drivers/CMSIS/DSP/Source/TransformFunctions/arm_rfft_init_q15.c",
        "Drivers/CMSIS/DSP/Source/TransformFunctions/arm_rfft_init_q31.c",
        "Drivers/CMSIS/DSP/Source/TransformFunctions/arm_rfft_q15.c",
        "Drivers/CMSIS/DSP/Source/TransformFunctions/arm_rfft_q31.c",
        "Drivers/CMSIS/NN/Source/ActivationFunctions/arm_nn_activations_q15.c",
        "Drivers/CMSIS/NN/Source/ActivationFunctions/arm_nn_activations_q7.c",
        "Drivers/CMSIS/NN/Source/ActivationFunctions/arm_relu_q15.c",
        "Drivers/CMSIS/NN/Source/ActivationFunctions/arm_relu_q7.c",
        "Drivers/CMSIS/NN/Source/ConvolutionFunctions/arm_convolve_1x1_HWC_q7_fast_nonsquare.c",
        "Drivers/CMSIS/NN/Source/ConvolutionFunctions/arm_convolve_HWC_q15_basic.c",
        "Drivers/CMSIS/NN/Source/ConvolutionFunctions/arm_convolve_HWC_q15_fast.c",
        "Drivers/CMSIS/NN/Source/ConvolutionFunctions/arm_convolve_HWC_q15_fast_nonsquare.c",
        "Drivers/CMSIS/NN/Source/ConvolutionFunctions/arm_convolve_HWC_q7_RGB.c",
        "Drivers/CMSIS/NN/Source/ConvolutionFunctions/arm_convolve_HWC_q7_basic.c",
        "Drivers/CMSIS/NN/Source/ConvolutionFunctions/arm_convolve_HWC_q7_basic_nonsquare.c",
        "Drivers/CMSIS/NN/Source/ConvolutionFunctions/arm_convolve_HWC_q7_fast.c",
        "Drivers/CMSIS/NN/Source/ConvolutionFunctions/arm_convolve_HWC_q7_fast_nonsquare.c",
        "Drivers/CMSIS/NN/Source/ConvolutionFunctions/arm_depthwise_conv_u8_basic_ver1.c",
        "Drivers/CMSIS/NN/Source/ConvolutionFunctions/arm_depthwise_separable_conv_HWC_q7.c",
        "Drivers/CMSIS/NN/Source/ConvolutionFunctions/arm_depthwise_separable_conv_HWC_q7_nonsquare.c",
        "Drivers/CMSIS/NN/Source/ConvolutionFunctions/arm_nn_mat_mult_kernel_q7_q15.c",
        "Drivers/CMSIS/NN/Source/ConvolutionFunctions/arm_nn_mat_mult_kernel_q7_q15_reordered.c",
        "Drivers/CMSIS/NN/Source/FullyConnectedFunctions/arm_fully_connected_mat_q7_vec_q15.c",
        "Drivers/CMSIS/NN/Source/FullyConnectedFunctions/arm_fully_connected_mat_q7_vec_q15_opt.c",
        "Drivers/CMSIS/NN/Source/FullyConnectedFunctions/arm_fully_connected_q15.c",
        "Drivers/CMSIS/NN/Source/FullyConnectedFunctions/arm_fully_connected_q15_opt.c",
        "Drivers/CMSIS/NN/Source/FullyConnectedFunctions/arm_fully_connected_q7.c",
        "Drivers/CMSIS/NN/Source/FullyConnectedFunctions/arm_fully_connected_q7_opt.c",
        "Drivers/CMSIS/NN/Source/NNSupportFunctions/arm_nn_mult_q15.c",
        "Drivers/CMSIS/NN/Source/NNSupportFunctions/arm_nn_mult_q7.c",
        "Drivers/CMSIS/NN/Source/NNSupportFunctions/arm_nntables.c",
        "Drivers/CMSIS/NN/Source/NNSupportFunctions/arm_q7_to_q15_no_shift.c",
        "Drivers/CMSIS/NN/Source/NNSupportFunctions/arm_q7_to_q15_reordered_no_shift.c",
        "Drivers/CMSIS/NN/Source/PoolingFunctions/arm_pool_q7_HWC.c",
        "Drivers/CMSIS/NN/Source/SoftmaxFunctions/arm_softmax_q15.c",
        "Drivers/CMSIS/NN/Source/SoftmaxFunctions/arm_softmax_q7.c",
    ],
    hdrs = [
        "Drivers/CMSIS/Core/Include/cmsis_armcc.h",
        "Drivers/CMSIS/Core/Include/cmsis_armclang.h",
        "Drivers/CMSIS/Core/Include/cmsis_armclang_ltm.h",
        "Drivers/CMSIS/Core/Include/cmsis_compiler.h",
        "Drivers/CMSIS/Core/Include/cmsis_gcc.h",
        "Drivers/CMSIS/Core/Include/cmsis_iccarm.h",
        "Drivers/CMSIS/Core/Include/cmsis_version.h",
        "Drivers/CMSIS/Core/Include/core_armv81mml.h",
        "Drivers/CMSIS/Core/Include/core_armv8mbl.h",
        "Drivers/CMSIS/Core/Include/core_armv8mml.h",
        "Drivers/CMSIS/Core/Include/core_cm0.h",
        "Drivers/CMSIS/Core/Include/core_cm0plus.h",
        "Drivers/CMSIS/Core/Include/core_cm1.h",
        "Drivers/CMSIS/Core/Include/core_cm23.h",
        "Drivers/CMSIS/Core/Include/core_cm3.h",
        "Drivers/CMSIS/Core/Include/core_cm33.h",
        "Drivers/CMSIS/Core/Include/core_cm35p.h",
        "Drivers/CMSIS/Core/Include/core_cm4.h",
        "Drivers/CMSIS/Core/Include/core_cm7.h",
        "Drivers/CMSIS/Core/Include/core_sc000.h",
        "Drivers/CMSIS/Core/Include/core_sc300.h",
        "Drivers/CMSIS/Core/Include/mpu_armv7.h",
        "Drivers/CMSIS/Core/Include/mpu_armv8.h",
        "Drivers/CMSIS/Core/Include/tz_context.h",
        "Drivers/CMSIS/DSP/Include/arm_common_tables.h",
        "Drivers/CMSIS/DSP/Include/arm_const_structs.h",
        "Drivers/CMSIS/DSP/Include/arm_math.h",
        "Drivers/CMSIS/DSP/PythonWrapper/cmsisdsp_pkg/src/cmsismodule.h",
        "Drivers/CMSIS/Device/ST/STM32L4xx/Include/stm32l412xx.h",
        "Drivers/CMSIS/Device/ST/STM32L4xx/Include/stm32l422xx.h",
        "Drivers/CMSIS/Device/ST/STM32L4xx/Include/stm32l431xx.h",
        "Drivers/CMSIS/Device/ST/STM32L4xx/Include/stm32l432xx.h",
        "Drivers/CMSIS/Device/ST/STM32L4xx/Include/stm32l433xx.h",
        "Drivers/CMSIS/Device/ST/STM32L4xx/Include/stm32l442xx.h",
        "Drivers/CMSIS/Device/ST/STM32L4xx/Include/stm32l443xx.h",
        "Drivers/CMSIS/Device/ST/STM32L4xx/Include/stm32l451xx.h",
        "Drivers/CMSIS/Device/ST/STM32L4xx/Include/stm32l452xx.h",
        "Drivers/CMSIS/Device/ST/STM32L4xx/Include/stm32l462xx.h",
        "Drivers/CMSIS/Device/ST/STM32L4xx/Include/stm32l471xx.h",
        "Drivers/CMSIS/Device/ST/STM32L4xx/Include/stm32l475xx.h",
        "Drivers/CMSIS/Device/ST/STM32L4xx/Include/stm32l476xx.h",
        "Drivers/CMSIS/Device/ST/STM32L4xx/Include/stm32l485xx.h",
        "Drivers/CMSIS/Device/ST/STM32L4xx/Include/stm32l486xx.h",
        "Drivers/CMSIS/Device/ST/STM32L4xx/Include/stm32l496xx.h",
        "Drivers/CMSIS/Device/ST/STM32L4xx/Include/stm32l4a6xx.h",
        "Drivers/CMSIS/Device/ST/STM32L4xx/Include/stm32l4p5xx.h",
        "Drivers/CMSIS/Device/ST/STM32L4xx/Include/stm32l4q5xx.h",
        "Drivers/CMSIS/Device/ST/STM32L4xx/Include/stm32l4r5xx.h",
        "Drivers/CMSIS/Device/ST/STM32L4xx/Include/stm32l4r7xx.h",
        "Drivers/CMSIS/Device/ST/STM32L4xx/Include/stm32l4r9xx.h",
        "Drivers/CMSIS/Device/ST/STM32L4xx/Include/stm32l4s5xx.h",
        "Drivers/CMSIS/Device/ST/STM32L4xx/Include/stm32l4s7xx.h",
        "Drivers/CMSIS/Device/ST/STM32L4xx/Include/stm32l4s9xx.h",
        "Drivers/CMSIS/Device/ST/STM32L4xx/Include/stm32l4xx.h",
        "Drivers/CMSIS/Device/ST/STM32L4xx/Include/system_stm32l4xx.h",
        "Drivers/CMSIS/Include/cmsis_armcc.h",
        "Drivers/CMSIS/Include/cmsis_armclang.h",
        "Drivers/CMSIS/Include/cmsis_armclang_ltm.h",
        "Drivers/CMSIS/Include/cmsis_compiler.h",
        "Drivers/CMSIS/Include/cmsis_gcc.h",
        "Drivers/CMSIS/Include/cmsis_iccarm.h",
        "Drivers/CMSIS/Include/cmsis_version.h",
        "Drivers/CMSIS/Include/core_armv81mml.h",
        "Drivers/CMSIS/Include/core_armv8mbl.h",
        "Drivers/CMSIS/Include/core_armv8mml.h",
        "Drivers/CMSIS/Include/core_cm0.h",
        "Drivers/CMSIS/Include/core_cm0plus.h",
        "Drivers/CMSIS/Include/core_cm1.h",
        "Drivers/CMSIS/Include/core_cm23.h",
        "Drivers/CMSIS/Include/core_cm3.h",
        "Drivers/CMSIS/Include/core_cm33.h",
        "Drivers/CMSIS/Include/core_cm35p.h",
        "Drivers/CMSIS/Include/core_cm4.h",
        "Drivers/CMSIS/Include/core_cm7.h",
        "Drivers/CMSIS/Include/core_sc000.h",
        "Drivers/CMSIS/Include/core_sc300.h",
        "Drivers/CMSIS/Include/mpu_armv7.h",
        "Drivers/CMSIS/Include/mpu_armv8.h",
        "Drivers/CMSIS/Include/tz_context.h",
        "Drivers/CMSIS/NN/Include/arm_nn_tables.h",
        "Drivers/CMSIS/NN/Include/arm_nnfunctions.h",
        "Drivers/CMSIS/NN/Include/arm_nnsupportfunctions.h",
        "Drivers/CMSIS/RTOS2/Include/cmsis_os2.h",
        "Drivers/CMSIS/RTOS2/Include/os_tick.h",
    ],
    includes = [
        "Drivers/CMSIS/Core/Include",
        "Drivers/CMSIS/DSP/Include",
        "Drivers/CMSIS/Device/ST/STM32L4xx/Include",
        "Drivers/CMSIS/Include",
        "Drivers/CMSIS/NN/Include",
        "Drivers/CMSIS/RTOS2/Include",
    ],
)

cc_library(
    name = "stm32l4xx_bsp_driver_nucleo_32",
    srcs = ["Drivers/BSP/STM32L4xx_Nucleo_32/stm32l4xx_nucleo_32.c"],
    hdrs = ["Drivers/BSP/STM32L4xx_Nucleo_32/stm32l4xx_nucleo_32.h"],
    deps = [":stm32l4xx_hal_driver"],
    includes = ["Drivers/BSP/STM32L4xx_Nucleo_32"],
)
